2009-09-24  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Let an SQL-based driver query also show the
	  list of supported printers and a printer query also the list of
	  suitable drivers, as the XML-based queries do.

2009-09-23  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Added methods make_exists_in_sql_db(),
	  printer_exists_in_sql_db(), driver_exists_in_sql_db(),
	  make_exists(), and driver_exists().

	  Added support for additional MySQL database fields in the driver
	  entries: group, locale, licenselink. Added also support for the
	  additional MySQL table for dependencies between drivers.

2009-09-18  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-ppdfile.in: When generating a PPD file, do only generate
	  the overview if really needed. This makes generating PPDs 10 times
	  faster whenusing a MySQL database.

	* lib/Foomatic/DB.pm: Completed get_combo_data_from_sql_db()
	  method. Now PPDs can be generated based on an SQL database.
	  Added new methods get_makes_from_sql_db(),
	  get_models_by_make_from_sql_db(),
	  get_printer_from_make_model_from_sql_db().

2009-09-17  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Removed line 

	  *cupsFilter:   "application/vnd.apple-pdf 25 foomatic-rip"

	  from the Foomatic-generated PPD files, it causes problems with
	  some printers on Mac OS X (bug #386, removes enhancement of bug 
	  #313).

	* lib/Foomatic/DB.pm: Started work on get_combo_data_from_sql_db().
	  For now it collects the printer and driver info but not yet the
	  option data.

2009-09-16  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Added more methods for using an SQL database:
	  printer_exists_in_sql_db(), get_printers_for_driver_from_sql_db(),
	  get_drivers_for_printer_from_sql_db(), get_margins_from_sql_db(),
	  get_driver_packages_from_sql_db
	  Let overview and driver listing also include links to downloadable